# box

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  perf.sh
bench/: hmap_bench.c  hmap_old.h
include/b8/: hmap.h
include/box/: bitset.h  core.h  darray.h  darray_core.h  hmap.h  hmap_core.h  spset.h  spset_core.h
performance/: CMakeLists.txt  README.md  bench.c  bench.h  bench_bitset.c  bench_box2d.c  bench_cpp.cpp  bench_cpp_stub.c  bench_darray.c  bench_flecs.c  bench_hmap.c  bench_spset.c  bench_stc.c  main.c  stb_ds_impl.c
src/box/: bitset.c  core.c  darray_core.c  hmap_core.c  spset_core.c
tests/: CMakeLists.txt  test_box.c  test_eightbits.c
tests/bitset/: test_bitset.c  test_bitset.h
tests/darray/: test_darray.c  test_darray.h
tests/hmap/: test_hmap.c  test_hmap.h
tests/spset/: test_spset.c  test_spset.h
